# ooblex

./: .env.example  .env.ninjasdk.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE_ACTUAL.md  CI_FIXES_NEEDED.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile.llm  Dockerfile.simple  Dockerfile.whisper  HOW_IT_WORKS.md  Makefile  NINJASDK_INTEGRATION_SUMMARY.md  QUICKSTART.md  README.md  README_CLEANUP.md  SECURITY.md  SECURITY_FIXES.md  SUGGESTIONS.md  VALIDATION_REPORT.md  WEBRTC_WORKFLOW.md  demo.py  demo_controller.py  deploy.sh  docker-compose.dev.yml  docker-compose.ninjasdk.yml  docker-compose.observability.yml  docker-compose.override.yml.example  docker-compose.simple.yml  docker-compose.webrtc.yml  docker-compose.yml  install_gstreamer.sh  install_janus.sh  install_nginx.sh  install_opencv.sh  install_rabbitmq.sh  install_redis.sh  (+14 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_request.md
.github/workflows/: ci.yml  dependency-scan.yml
charts/ooblex/: Chart.yaml  values.prod.yaml  values.yaml
code/: .config.py.swp  MIGRATION.md  README.md  api.py  brain.py  brain_mediapipe.py  brain_simple.py  config.py  decoder.py  demo_effects.py  detect_face.py  emotions.pb  llm_worker.py  mjpeg.py  model.py  pixel_shuffler.py  process_old.py  pub.py  rabbit.py_old  red.py  rtc.py  tensorthread_shell.py  webrtc.py  whisper_worker.py
colab/: Ooblex_CI_Tests.ipynb  Ooblex_Demo.ipynb  README.md  ooblex_demo.py
docs/: CLEANUP_REPORT.md  CNAME  GOOGLE_COLAB_DEPLOYMENT_PLAN.md  README.md  VIDEO_FLOW.md  api.md  deployment.md  features.html  gettingstarted.html  index.html  models.md  security.md  webrtc.md
docs/archive/: PROJECT_STATUS.md  README.old.md  REAL_FEATURES.md  REVIEW_REPORT.md  WEBRTC_DEMO.md
docs/css/: custom.css  modern.css  normalize.css  style.css
docs/ninjasdk/: ARCHITECTURE.md  QUICKSTART.md  README.md
html/: README.md  collaboration-demo.html  demo.html  index.html  opencv-demo.html  webrtc-demo.html
html/js/: collaboration.js  edge_worker.js  ooblex.v0.js
html/ninjasdk/: voice-to-text-demo.html
janus_confs/: README.conf  README.md  janus.cfg  janus.eventhandler.rabbitmqevh.cfg  janus.plugin.streaming.cfg  janus.plugin.videoroom.cfg  janus.transport.http.cfg  janus.transport.pfunix.cfg  janus.transport.rabbitmq.cfg  janus.transport.websockets.cfg
k8s/: api.yaml  configmap.yaml  ingress.yaml  ml-worker.yaml  namespace.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml  secret.yaml  webrtc.yaml
launch_scripts/: README.SERVICES  README.md  api.service  brain.service  collaboration.service  decoder.service  edge.service  jpg.service  webrtc.service
models/: README.md
monitoring/: alerts.yml  prometheus-webrtc.yml  prometheus.yml
nginx/: nginx.conf  webrtc.conf
observability/: alertmanager.yml  loki-config.yaml  otel-collector-config.yaml  promtail-config.yaml  tempo.yaml
protos/: ooblex.proto
scripts/: README-docker-compose-simple-test.md  download_models.sh  generate_grpc.sh  install_janus.sh  install_rabbitmq.sh  install_redis.sh  test-docker-compose-simple.sh
services/: __init__.py
ssl/: generate_certs.sh  server.crt  server.key  server.pem
tests/: conftest.py  test_docker_compose_simple.py  test_installation.py
(+127 files in other folders)
