[tool.poetry]
name = "ooblex"
version = "2.0.0"
description = "Modern WebRTC-based AI video processing platform"
authors = ["Ooblex Team"]
license = "MIT"
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
aiohttp = "^3.9.3"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# Database and Caching
redis = "^5.0.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"

# Message Queue
aio-pika = "^9.4.0"
amqpstorm = "^2.10.0"

# ML/AI Frameworks
torch = "^2.1.2"
torchvision = "^0.16.2"
tensorflow = "^2.15.0"
onnx = "^1.15.0"
onnxruntime-gpu = "^1.16.3"
numpy = "^1.26.3"
opencv-python = "^4.9.0"
Pillow = "^10.2.0"
scikit-learn = "^1.4.0"
mediapipe = "^0.10.9"

# Video Processing
av = "^11.0.0"
imageio = "^2.33.1"
imageio-ffmpeg = "^0.4.9"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
cryptography = "^41.0.7"

# Monitoring
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"
sentry-sdk = "^1.39.2"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"

# Utilities
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
tqdm = "^4.66.1"
click = "^8.1.7"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["ooblex"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.poetry.scripts]
ooblex = "ooblex.cli:main"